# edgefootball

./: .env.example  .gitignore  Dockerfile  EDGEFOOTBALL_REBRAND_SUMMARY.md  FIXTURE_DETAIL_FIX.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_FIX.md  MODERNIZATION_GUIDE.md  Makefile  ODDS_AND_COUPON_IMPLEMENTATION.md  QUICK_START.md  README.md  README_UEFA_SETUP.md  SUMMARY.md  TESTING_GUIDE.md  TEST_CHECKLIST.md  UEFA_LIVE_SCORES_FEATURE.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt  test_dalle.py  test_saved_predictions.py
app/: admin.py  ai_commentary.py  auth.py  blog.py  blog_content_generator.py  chat_history.py  config.py  coupon_builder.py  coupons.py  create_test_user.py  db.py  db_migrations.py  fixture_board.py  image_generation.py  league_model_bootstrap.py  league_model_routing.py  mailer.py  main.py  scheduler.py  seo.py
data/: features.py  ingest.py
docs/: DEPLOY_EDGEFOOTBALL_VERCEL.md  gsc.md  performance.md  seo.md
migrations/: 001_init.sql  002_saved_predictions.sql  003_indexes.sql  004_fixture_board_cache.sql  005_coupon_generation_runs.sql  006_league_default_models.sql  007_coupon_library.sql  008_ai_chat_history.sql  009_ai_chat_threads_multi_session.sql  010_model_quality.sql  011_auth_email_otp.sql  012_add_scores_and_state.sql  013_auth_google_login.sql  014_auth_profile_avatar.sql  015_saved_predictions_created_by.sql  016_blog_system.sql  017_auth_sessions.sql
mobil/: .env.development  .env.example  .eslintrc.js  CHAT_IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  app.json  babel.config.js  (+7 more)
(+391 files in other folders)
