[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "football-sim"
version = "0.1.0"
description = "Monte Carlo football match simulation API using SportMonks v3"
authors = [{name = "FootballAI Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn[standard]==0.29.0",
    "httpx==0.27.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "orjson==3.10.3",
    "tenacity==8.2.3",
    "cachetools==5.3.3",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "lightgbm==4.3.0",
    "catboost==1.2.2",
    "pyarrow==15.0.0",
    "SQLAlchemy==2.0.29",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    "celery==5.3.6",
    "redis==5.0.3",
    "loguru==0.7.2",
    "google-auth==2.48.0",
    "requests==2.32.3"
]

[project.optional-dependencies]
test = ["pytest==8.1.1", "pytest-cov==4.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["app", "sportmonks_client", "data", "modeling", "worker"]

[tool.ruff]
line-length = 120
